--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/lab": "^5.0.0-alpha.145",
+    "@mui/material": "^5.14.10",
+    "@mui/styled-engine-sc": "^5.14.10",
+    "@mui/system": "^5.14.10",
+    "@mui/x-date-pickers": "^6.15.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "dayjs": "^1.11.10",
     "firebase": "^10.3.1",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
@@ -14,6 +20,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.11",
     "swiper": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
