--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^4.1.0",
     "styled-components": "^5.3.11",
     "swiper": "^10.1.0",
     "web-vitals": "^2.1.4"
